[gd_scene load_steps=10 format=3 uid="uid://cph7vh04s1lqd"]

[ext_resource type="Script" uid="uid://bdkcsj23h84ei" path="res://Combat/combat_manager.gd" id="1_1dg5m"]
[ext_resource type="Resource" uid="uid://c8qap106ig3e4" path="res://Entities/test_survivor_data.tres" id="2_i3a13"]
[ext_resource type="Script" uid="uid://cx2teq0gnkomg" path="res://Entities/survivor_data.gd" id="2_llqio"]
[ext_resource type="Script" uid="uid://yh5p1uvvtt7t" path="res://Combat/turn_manager.gd" id="2_u67t4"]
[ext_resource type="Script" uid="uid://bjbjk44kmlcnk" path="res://Combat/entity_factory.gd" id="2_wwoy5"]
[ext_resource type="Script" uid="uid://v1ar61l8gcg6" path="res://Combat/survivor_container.gd" id="3_d1u53"]
[ext_resource type="Resource" uid="uid://iyvdn4umhjed" path="res://Entities/test_enemy_data.tres" id="4_0bf6v"]
[ext_resource type="Script" uid="uid://bl6k1nrh66qpy" path="res://Entities/enemy_data.gd" id="4_fq64j"]
[ext_resource type="Script" uid="uid://ca00k3qsgsjjk" path="res://Combat/enemy_container.gd" id="5_cb8w6"]

[node name="TestBattle" type="Node2D"]

[node name="CombatManager" type="Node2D" parent="."]
script = ExtResource("1_1dg5m")
temp_allies = Array[ExtResource("2_llqio")]([ExtResource("2_i3a13")])
temp_enemies = Array[ExtResource("4_fq64j")]([ExtResource("4_0bf6v")])
metadata/_custom_type_script = "uid://bdkcsj23h84ei"

[node name="TurnManager" type="Node2D" parent="CombatManager"]
script = ExtResource("2_u67t4")
metadata/_custom_type_script = "uid://yh5p1uvvtt7t"

[node name="EntityFactory" type="Node2D" parent="CombatManager"]
script = ExtResource("2_wwoy5")
metadata/_custom_type_script = "uid://bjbjk44kmlcnk"

[node name="SurvivorContainer" type="Node2D" parent="CombatManager"]
script = ExtResource("3_d1u53")
metadata/_custom_type_script = "uid://v1ar61l8gcg6"

[node name="EnemyContainer" type="Node2D" parent="CombatManager"]
script = ExtResource("5_cb8w6")
metadata/_custom_type_script = "uid://ca00k3qsgsjjk"

[node name="NextTurnButton" type="Button" parent="."]
offset_right = 80.0
offset_bottom = 36.0
text = "Next Turn"

[connection signal="button_down" from="NextTurnButton" to="CombatManager/TurnManager" method="_on_button_button_down"]
